--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ body {
   bottom: 0;
   transform: translateY(50%);
   display: flex;
+  z-index: 10;
+
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .summary > * {
@@ -136,6 +139,8 @@ body {
   height: 65%;
   width: 100%;
   background-color: #f4f4f4;
+
+  z-index: 2;
 }
 
 .attribution {
